[tool.poetry]
name = "cryptoenv"
version = "0.1.0"
description = ""
authors = ["kaznak <kaznak.at.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptostore = {git = "https://github.com/bmoscon/cryptostore.git"}
redis = "^3.5.3"
aioredis = "^1.3.1"
cryptofeed = {git = "https://github.com/bmoscon/cryptofeed.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
